<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>de.ingrid</groupId>
    <artifactId>ingrid-base-pom</artifactId>
    <version>5.0.0</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>ingrid-elasticsearch-tools</artifactId>
  <version>5.15.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>InGrid Elasticsearch Tools</name>

  <!-- ==================== Source Code Management ==================== -->
  <scm>
    <connection>scm:git:git@github.com:informationgrid/ingrid-elasticsearch-tools.git</connection>
    <developerConnection>scm:git:git@github.com:informationgrid/ingrid-elasticsearch-tools.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <!-- ==================== REPOSITORIES ==================== -->
  <repositories>
    <!-- Repo of parent pom needed, parent pom may not be installed locally yet -->
    <repository>
      <id>nexus</id>
      <name>Nexus Repo</name>
      <url>https://nexus.informationgrid.eu/repository/maven-public</url>
    </repository>
  </repositories>

  <!-- ==================== PROPERTIES ==================== -->
  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <elastic.version>7.17.6</elastic.version>
    <spring.version>5.3.23</spring.version>
  </properties>

  <!-- ==================== DEPENDENCIES ==================== -->
  <dependencies>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-utils</artifactId>
      <version>5.15.0-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.19.0</version>
    </dependency>

    <!-- Elasticsearch -->
    <dependency>
      <groupId>org.elasticsearch</groupId>
      <artifactId>elasticsearch</artifactId>
      <version>${elastic.version}</version>
    </dependency>
    <dependency>
      <groupId>org.elasticsearch.client</groupId>
      <artifactId>transport</artifactId>
      <version>${elastic.version}</version>
    </dependency>
    <!--<dependency>
      <groupId>org.elasticsearch.plugin</groupId>
      <artifactId>transport-netty4-client</artifactId>
      <version>${elastic.version}</version>
    </dependency>-->
    <!--<dependency>
        <groupId>org.elasticsearch.client</groupId>
        <artifactId>elasticsearch-rest-high-level-client</artifactId>
        <version>${elastic.version}</version>
    </dependency>-->

    <!-- Spring -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>jakarta.annotation</groupId>
      <artifactId>jakarta.annotation-api</artifactId>
      <version>1.3.5</version>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-ibus-client</artifactId>
      <version>5.15.0-SNAPSHOT</version>
    </dependency>
  </dependencies>

  <!-- ==================== Build Configuration ==================== -->
  <build>
    <plugins>
      <!--
        This plugin configures the git-flow for this project
      -->

      <plugin>
        <groupId>external.atlassian.jgitflow</groupId>
        <artifactId>jgitflow-maven-plugin</artifactId>
        <version>1.0-m4.3</version>
        <configuration>
          <defaultOriginUrl>https://github.com/informationgrid/ingrid-elasticsearch-tools</defaultOriginUrl>
          <noDeploy>true</noDeploy>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>1.16</version>
      </plugin>
    </plugins>
  </build>
</project>
